Updating site with V1 layout: - Basic DOM structure and episode blocks - Added simple styling and Open Sans fonts - Use simple H5 audio player - WIP: Mobile styling

--- a/index.html
+++ b/index.html
@@ -3,12 +3,70 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Mister Baby Podcast</title>
-
+	<meta name="viewport" content="width=device-width">
+	<meta name="renderer" content="webkit">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-	<h1>Hello World</h1>
-
+	<div id="body-column">
+		<div id="header-block">
+			<div class="header-image">
+				<img src="images/MBartwork_sm.jpg" />
+			</div>
+			<h1>Mister Baby Podcast</h1>
+			<h5 class="subtext">
+				Sean and Beryl a.k.a. Mister Baby, team up with guests and invite you to reminisce about great times in their lives. From New York to Shanghai and every else in-between, join us for ex-pat and local tales from everywhere in the world.
+			</h5>
+		</div>
+		<div id="episodes-block">
+			<div class="episode">
+				<div class="episode-image">
+					<img src="images/002_alex.jpg" />
+				</div>
+				<div class="episode-content">
+					<h2>Ep #2: Start-ups & Animal Dung w/ Alex Duncan</h2>
+					<p class="subtext">
+						From a teenage computer nerd, to a degree in Zoology, Alex Duncan tells us how he leveraged his talents and opportunities into several business ventures that have truely run the start-up landscape gamut here in China.
+					</p>
+					<audio class="episode-player" controls>
+						<source src="https://dl.dropboxusercontent.com/s/s9eco5nmo5kvt4b/002_alex.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+				</div>
+			</div>
+			<div class="episode">
+				<div class="episode-image">
+					<img src="images/001_tim.jpg" />
+				</div>
+				<div class="episode-content">
+					<h2>Ep #1: Hamburger Stabbing w/ Tim Neesham</h2>
+					<p class="subtext">
+						From trouble with street kids in South America, to hillybillies of the Australian Outback, Tim has certainly seen some things, and that was all before he landed here in Shanghai.
+					</p>
+					<audio class="episode-player" controls>
+						<source src="https://dl.dropboxusercontent.com/s/0ju2o1diutjw015/000_intro_lo.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+				</div>
+			</div>
+			<div class="episode">
+				<div class="episode-image">
+					<img src="images/MBartwork_sm.jpg" />
+				</div>
+				<div class="episode-content">
+					<h2>Ep #0: The Roadtrip w/ Beryl and Sean</h2>
+					<p class="subtext">
+						For Episode 0, Beryl and I sat down and just chatted with ourselves as sort of an intro to the podcast. We ( mostly B ) ended up telling the story of our road trip across America, and how it tested our friendship, but inevitably bringing us much closer.
+					</p>
+					<audio class="episode-player" controls>
+						<source src="https://dl.dropboxusercontent.com/s/0ju2o1diutjw015/000_intro_lo.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+				</div>
+			</div>
+		</div>
+	</div>
 	<script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
