Adding more mobile styling: - Adding play button for mobile browsers > direct link to file - Shrinking text down to fit properly

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 						<source src="https://dl.dropboxusercontent.com/s/s9eco5nmo5kvt4b/002_alex.mp3" type="audio/mpeg">
 						Your browser does not support the audio element.
 					</audio>
+					<a class="episode-link" href="https://dl.dropboxusercontent.com/s/s9eco5nmo5kvt4b/002_alex.mp3">Play Episode</a>
 				</div>
 			</div>
 			<div class="episode">
@@ -48,6 +49,7 @@
 						<source src="https://dl.dropboxusercontent.com/s/0ju2o1diutjw015/000_intro_lo.mp3" type="audio/mpeg">
 						Your browser does not support the audio element.
 					</audio>
+					<a class="episode-link" href="https://dl.dropbox.com/s/gipvtwucts8yyz4/001_Tim_lo.mp3">Play Episode</a>
 				</div>
 			</div>
 			<div class="episode">
@@ -63,6 +65,7 @@
 						<source src="https://dl.dropboxusercontent.com/s/0ju2o1diutjw015/000_intro_lo.mp3" type="audio/mpeg">
 						Your browser does not support the audio element.
 					</audio>
+					<a class="episode-link" href="https://dl.dropboxusercontent.com/s/0ju2o1diutjw015/000_intro_lo.mp3">Play Episode</a>
 				</div>
 			</div>
 		</div>
