Adding Episode 3 to Site and updating feed

--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
 		<div id="episodes-block">
 			<div class="episode">
 				<div class="episode-image">
+					<img src="images/MB03sleepover.jpg" />
+				</div>
+				<div class="episode-content">
+					<h2>Ep #3: HoneyBadgers w/ Annie Wong, Jenny Wu, & Clarissa Dourmashkin-Cagol</h2>
+					<p class="subtext">
+						Hong Kong, Paris, New York, and Shanghai, the honeybadger ladies have really traveled the globe, and are here to share their stories.
+					</p>
+					<audio class="episode-player" controls>
+						<source src="https://dl.dropboxusercontent.com/s/rxee51e3qagbv09/003_honeybadgers.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<a class="episode-link" href="https://dl.dropboxusercontent.com/s/rxee51e3qagbv09/003_honeybadgers.mp3">Play Episode</a>
+				</div>
+			</div>
+			<div class="episode">
+				<div class="episode-image">
 					<img src="images/002_alex.jpg" />
 				</div>
 				<div class="episode-content">
@@ -46,10 +62,10 @@
 						From trouble with street kids in South America, to hillybillies of the Australian Outback, Tim has certainly seen some things, and that was all before he landed here in Shanghai.
 					</p>
 					<audio class="episode-player" controls>
-						<source src="https://dl.dropboxusercontent.com/s/0ju2o1diutjw015/000_intro_lo.mp3" type="audio/mpeg">
+						<source src="https://dl.dropboxusercontent.com/s/gipvtwucts8yyz4/001_Tim_lo.mp3" type="audio/mpeg">
 						Your browser does not support the audio element.
 					</audio>
-					<a class="episode-link" href="https://dl.dropbox.com/s/gipvtwucts8yyz4/001_Tim_lo.mp3">Play Episode</a>
+					<a class="episode-link" href="https://dl.dropboxusercontent.com/s/gipvtwucts8yyz4/001_Tim_lo.mp3">Play Episode</a>
 				</div>
 			</div>
 			<div class="episode">
