--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
 		<div id="episodes-block">
 			<div class="episode">
 				<div class="episode-image">
+					<img src="images/MB04tom.jpg" />
+				</div>
+				<div class="episode-content">
+					<h2>Ep #4: Oofty Goofty w/ Tom Weishan</h2>
+					<p class="subtext">
+						From a failed Haze Master in university, to Second City in Chicago, and finally impromptu talent shows in Shanghai, our guest Tom Weishan is always ready to accept any challange thrown at him.
+					</p>
+					<audio class="episode-player" controls>
+						<source src="https://dl.dropboxusercontent.com/s/0dpa0ji5lmvbvk2/004_Tom.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<a class="episode-link" href="https://dl.dropboxusercontent.com/s/0dpa0ji5lmvbvk2/004_Tom.mp3">Play Episode</a>
+				</div>
+			</div>
+			<div class="episode">
+				<div class="episode-image">
 					<img src="images/MB03sleepover.jpg" />
 				</div>
 				<div class="episode-content">
