--- a/index.html
+++ b/index.html
@@ -22,6 +22,29 @@
 		<div id="episodes-block">
 			<div class="episode">
 				<div class="episode-image">
+					<img src="images/MB05.jpg" />
+				</div>
+				<div class="episode-content">
+					<h2>Ep #5: Too Many Sweatshirts w/ Ida Lindsey &amp; Ben Frank</h2>
+					<p class="subtext">
+						Hosts of The Failure Show, Ben and Ida, join us for stories about Mississippi funerals, adventures in israel, courtroom confessions, and eating cheesesteaks with celebrities.
+					</p>
+					<p class="subtext">
+						Check out The Failure Show Podcast:<br>
+						<a href="http://www.benfrankcomedy.com/the-failure-show/">http://www.benfrankcomedy.com</a>
+						<br><br>
+						The Failure Show on iTunes:<br>
+						<a href="https://itunes.apple.com/us/podcast/the-failure-show/id1200628812?mt=2">https://itunes.apple.com/us/podcast/the-failure-show/</a>
+					</p>
+					<audio class="episode-player" controls>
+						<source src="https://dl.dropboxusercontent.com/s/3ej6c003wfk3658/005_Ben_Ida.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<a class="episode-link" href="https://dl.dropboxusercontent.com/s/3ej6c003wfk3658/005_Ben_Ida.mp3">Play Episode</a>
+				</div>
+			</div>
+			<div class="episode">
+				<div class="episode-image">
 					<img src="images/MB04tom.jpg" />
 				</div>
 				<div class="episode-content">
