Connecting Image to proper namespace

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div id="episodes-block">
 			<div class="episode">
 				<div class="episode-image">
-					<img src="images/MB05.jpg" />
+					<img src="images/MB05.JPG" />
 				</div>
 				<div class="episode-content">
 					<h2>Ep #5: Too Many Sweatshirts w/ Ida Lindsey &amp; Ben Frank</h2>
