--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
 		<div id="episodes-block">
 			<div class="episode">
 				<div class="episode-image">
+					<img src="images/MB06.JPG" />
+				</div>
+				<div class="episode-content">
+					<h2>Ep #6: Guns, Drugs, &amp; the Autobahn w/ Nate</h2>
+					<audio class="episode-player" controls>
+						<source src="https://dl.dropboxusercontent.com/s/j3f69n96xad14yi/006_nate.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<p class="subtext">
+						Guns, Drugs, and Raves: the man known only as Nate joins us for this week's episode, and tells us some amazing, albeit censored, tales from his life.
+					</p>
+					<a class="episode-link" href="https://dl.dropboxusercontent.com/s/j3f69n96xad14yi/006_nate.mp3">Play Episode</a>
+				</div>
+			</div>
+			<div class="episode">
+				<div class="episode-image">
 					<img src="images/MB05.JPG" />
 				</div>
 				<div class="episode-content">
