Fixing broken images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div id="episodes-block">
 			<div class="episode">
 				<div class="episode-image">
-					<img src="images/MB06.JPG" />
+					<img src="images/MB06.jpg" />
 				</div>
 				<div class="episode-content">
 					<h2>Ep #6: Guns, Drugs, &amp; the Autobahn w/ Nate</h2>
@@ -38,7 +38,7 @@
 			</div>
 			<div class="episode">
 				<div class="episode-image">
-					<img src="images/MB05.JPG" />
+					<img src="images/MB005.jpg" />
 				</div>
 				<div class="episode-content">
 					<h2>Ep #5: Too Many Sweatshirts w/ Ida Lindsey &amp; Ben Frank</h2>
