--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
 		<div id="episodes-block">
 			<div class="episode">
 				<div class="episode-image">
+					<img src="images/MB07alec.jpg" />
+				</div>
+				<div class="episode-content">
+					<h2>Ep #7: Formal Talks &amp; Monkey BBQ w/ Alec Odahara 田原皓</h2>
+					<audio class="episode-player" controls>
+						<source src="https://dl.dropboxusercontent.com/s/bldhi5i9zccn8px/007_alec.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<p class="subtext">
+						Formal Talks and Monkey BBQ: we sat down with a real Chinese television celebrity and to talk about unwanted house guests, monkey accidents, and having thousands of loyal fans.
+					</p>
+					<a class="episode-link" href="https://dl.dropboxusercontent.com/s/bldhi5i9zccn8px/007_alec.mp3">Play Episode</a>
+				</div>
+			</div>
+			<div class="episode">
+				<div class="episode-image">
 					<img src="images/MB06.jpg" />
 				</div>
 				<div class="episode-content">
