--- a/index.html
+++ b/index.html
@@ -22,6 +22,26 @@
 		<div id="episodes-block">
 			<div class="episode">
 				<div class="episode-image">
+					<img src="images/MB08henry.jpg" />
+				</div>
+				<div class="episode-content">
+					<h2>Ep #8: Fighting Air Pollution w/ Henry Sung</h2>
+					<audio class="episode-player" controls>
+						<source src="https://dl.dropboxusercontent.com/s/tzk19j6mjwmprqz/008_henry.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<p class="subtext">
+						American Football in China, and fighting air pollution are what Henry Sung does best. Not to mention he also used to wear white Fubu jerseys and CMM chains.
+					</p>
+					<p class="subtext">
+						Check out idMask and Breathe Clean:<br>
+						<a href="http://www.idmask.com.cn">www.idmask.com.cn</a>
+					</p>
+					<a class="episode-link" href="https://dl.dropboxusercontent.com/s/tzk19j6mjwmprqz/008_henry.mp3">Play Episode</a>
+				</div>
+			</div>
+			<div class="episode">
+				<div class="episode-image">
 					<img src="images/MB07alec.jpg" />
 				</div>
 				<div class="episode-content">
