Uploading Episode 009 - Otto

--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
 		<div id="episodes-block">
 			<div class="episode">
 				<div class="episode-image">
+					<img src="images/MB09otto.jpg" />
+				</div>
+				<div class="episode-content">
+					<h2>Ep #9: The Future of Chinese Culture w/ Otto SOM</h2>
+					<audio class="episode-player" controls>
+						<source src="https://dl.dropboxusercontent.com/s/tzk19j6mjwmprqz/008_henry.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<p class="subtext">
+						What will the future of global fashion and culture hold? Otto Som belives that China will be the biggest player in worldwide cultural influence for many years to come.
+					</p>
+					<a class="episode-link" href="https://dl.dropboxusercontent.com/s/bm7r0lw7348v8pl/009_Otto.mp3">Play Episode</a>
+				</div>
+			</div>
+			<div class="episode">
+				<div class="episode-image">
 					<img src="images/MB08henry.jpg" />
 				</div>
 				<div class="episode-content">
