Adding episode 12 Logan

--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
 			
 			<div class="episode">
 				<div class="episode-image">
+					<img src="images/MB12logan.jpg" />
+				</div>
+				<div class="episode-content">
+					<h2>Ep #12: Going Solo w/ Logan Clements</h2>
+					<audio class="episode-player" controls>
+						<source src="https://dl.dropboxusercontent.com/s/v5qp8dt6gtwh1nb/012_Logan.mp3">
+						Your browser does not support the audio element.
+					</audio>
+					<p class="subtext">
+						Founder and CEO of Logan Strategy Group, Logan Clements joins us this week to talk about starting her business, and to share her Top 5 biggest pop culture influences.
+					</p>
+					<a class="episode-link" href="https://dl.dropboxusercontent.com/s/v5qp8dt6gtwh1nb/012_Logan.mp3">Play Episode</a>
+				</div>
+			</div>
+
+			<div class="episode">
+				<div class="episode-image">
 					<img src="images/MB11clara.jpg" />
 				</div>
 				<div class="episode-content">
