Adding episode 13 - Sherry Shi

--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
 			</h5>
 		</div>
 		<div id="episodes-block">
+
+			<div class="episode">
+				<div class="episode-image">
+					<img src="images/MB13sherry.jpg" />
+				</div>
+				<div class="episode-content">
+					<h2>Ep #13: You're Such a Joey w/ Sherry Shi</h2>
+					<audio class="episode-player" controls>
+						<source src="https://dl.dropboxusercontent.com/s/z99vkldtyf2z8k5/013_Sherry.mp3">
+						Your browser does not support the audio element.
+					</audio>
+					<p class="subtext">
+						Creative Director Sherry Shi shares stories of growing up in Beijing, her rebellious teenage years, and the love and hate relationship she has with agency life.
+					</p>
+					<a class="episode-link" href="https://dl.dropboxusercontent.com/s/z99vkldtyf2z8k5/013_Sherry.mp3">Play Episode</a>
+				</div>
+			</div>
 			
 			<div class="episode">
 				<div class="episode-image">
