Adding ep14 and artwork to site

--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
 
 			<div class="episode">
 				<div class="episode-image">
+					<img src="images/MB14charlie.jpg" />
+				</div>
+				<div class="episode-content">
+					<h2>Ep #14: The Bao of Charlie w/ Charlie Erickson</h2>
+					<audio class="episode-player" controls>
+						<source src="https://dl.dropboxusercontent.com/s/7wepbqbtonv4nby/014_charlie.mp3">
+						Your browser does not support the audio element.
+					</audio>
+					<p class="subtext">
+						Baopals co-founder Charlie Erickson shares is story of breaking down the shopping barrier for ex-pats and having an embarassing accident in the middle of the club.
+					</p>
+					<a class="episode-link" href="https://dl.dropboxusercontent.com/s/7wepbqbtonv4nby/014_charlie.mp3">Play Episode</a>
+				</div>
+			</div>
+
+			<div class="episode">
+				<div class="episode-image">
 					<img src="images/MB13sherry.jpg" />
 				</div>
 				<div class="episode-content">
